# DIYbyCybergear

./: .gitignore  README.md
motion_control/: CMakeLists.txt  serial_control_interface.py
motion_control/ccontrol/include/: serial_control.h
motion_control/ccontrol/src/: serial_control.cpp
motion_control/pycontrol/: serial_control_interface.py
motion_control/ros_control/: CMakeLists.txt  package.xml
motion_control/ros_control/config/: joint_limits.yaml  my_robot_controller.yaml  my_robot_trajactory_controller.yaml
motion_control/ros_control/include/: myrobot_hardware_interface.h
motion_control/ros_control/launch/: my_robot_position_control.launch  my_robot_ros_control.launch  my_robot_trajactory_control.launch
motion_control/ros_control/src/: myrobot_hardware_interface.cpp
motion_control/serial_control/: CMakeLists.txt
motion_control/serial_control/include/: serial_control.h
motion_control/serial_control/src/: serial_control.cpp
motion_control/serial_control/test/: serial_control_test.cpp
test/: control_two_gear.ipynb  test_serial_ubuntu.py
